WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309094
Fix content visibility rendering for hosted materials
https://bugs.webkit.org/show_bug.cgi?id=309094
Summary
Fix content visibility rendering for hosted materials
ccarley2
Reported
2026-03-03 11:48:44 PST
media/modern-media-controls/css/visibility-hidden.html is a constant image failure
Attachments
Add attachment
proposed patch, testcase, etc.
ccarley2
Comment 1
2026-03-03 11:48:45 PST
<
rdar://problem/162402260
>
ccarley2
Comment 2
2026-03-03 11:59:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59818
EWS
Comment 3
2026-03-03 17:04:16 PST
Committed
308591@main
(a2e342593d0f): <
https://commits.webkit.org/308591@main
> Reviewed commits have been landed. Closing PR #59818 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug