Fix content visibility rendering for hosted materials https://bugs.webkit.org/show_bug.cgi?id=309094 rdar://162402260

Reviewed by Aditya Keerthi.

The problem is that glass material styles are not on the main layer or the backdrop
layer. Updating contents visibility, correctly hid these two layers, but did not hide
the structural layer.

The fix is to hide the structural layer if it's for material. This is a similar
pattern seen throughout GraphicsLayerCA for material hosting.

* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateContentsVisibility):

Canonical link: https://commits.webkit.org/308591@main